--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <h1>{{helpText}}</h1>
+    {{>header}}
+    <img src="/img/angels.jpg" alt="angels" />
     <p>Created by {{name}}</p>
+    {{>foother}}
   </body>
 </html>
