--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -7,7 +7,8 @@
   </head>
 
   <body>
-    <h1>{{title}}</h1>
+    {{>header}}
     <p>Created by {{name}}</p>
+    {{>foother}}
   </body>
 </html>
