--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -7,8 +7,8 @@
   </head>
 
   <body>
-    <h1>{{title}}</h1>
-    <img src="/img/angels.jpg" alt="angels" />
+    {{>header}}
     <p>Created by {{name}}</p>
+    {{>foother}}
   </body>
 </html>
