--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -3,11 +3,11 @@
 <html>
   <head>
     <link rel="stylesheet" href="/css/styles.css" />
-    <script src="/js/app.js"></script>
   </head>
 
   <body>
     {{>header}}
+    <p>{{errorMessage}}</p>
     {{>foother}}
   </body>
 </html>
