--- a/web-server/templates/views/404.hbs
+++ b/web-server/templates/views/404.hbs
@@ -2,12 +2,17 @@
 
 <html>
   <head>
+    <title>404</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
-    {{>header}}
-    <p>{{errorMessage}}</p>
-    {{>foother}}
+    <div class="main-content">
+      {{>header}}
+      <p>{{errorMessage}}</p>
+    </div>
+
+      {{>foother}}
   </body>
 </html>
