--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -2,12 +2,18 @@
 
 <html>
   <head>
+    <title>Help</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="/js/app.js"></script>
   </head>
 
   <body>
-    {{>header}}
+    <div class="main-content">
+      {{>header}}
+      <p>{{helpText}}</p>
+    </div>
+
     {{>foother}}
   </body>
 </html>
