--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -11,6 +11,7 @@
   <body>
     <div class="main-content">
       {{>header}}
+      <p>This site was created by Nebojsa Nikolic. It uses data from mapnox.com and darksky.net!</p>
       <img class="portrait" src="/img/angels.jpg" alt="angels" />
     </div>
 
